--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             Отримаєте можливість стати справжнім садівником, <br />
             не покидаючи межі своєї оселі
           </p>
-          <a href="#" class="main__btn">ХОЧУ ЗАМОВИТИ</a>
+          <a href="#contacts" class="main__btn">ХОЧУ ЗАМОВИТИ</a>
         </div>
       </div>
     </section>
@@ -213,11 +213,13 @@
               Ваш браузер не підтримує відео.
             </video>
           </div>
-          <a class="info__btn" href="">ВІДГУКИ</a>
+          <a class="info__btn" href="https://ecocube.com.ua/smartgrowkit/"
+            >ВІДГУКИ</a
+          >
         </div>
       </div>
     </section>
-    <section class="contacts">
+    <section class="contacts" id="contacts">
       <div class="container">
         <div class="contacts__inner">
           <h3>
@@ -260,9 +262,18 @@
         <div class="footer__inner">
           <h3>Ми у соціальних мережах</h3>
           <div class="social">
-            <img class="social__img" src="images/inst.png" alt="" />
-            <img class="social__img" src="images/tt.png" alt="" />
-            <img class="social__img" src="images/yt.png" alt="" />
+            <a href="https://www.instagram.com/ekokubua/" class="social__img">
+              <img class="social__img" src="images/inst.png" alt="" />
+            </a>
+            <a href="https://www.tiktok.com/@ekokubua" class="social__img">
+              <img class="social__img" src="images/tt.png" alt="" />
+            </a>
+            <a
+              href="https://www.youtube.com/@amazinggiftua"
+              class="social__img"
+            >
+              <img class="social__img" src="images/yt.png" alt="" />
+            </a>
           </div>
         </div>
       </div>
